# fliptemp

./: .gitignore  CMakeLists.txt  README.md
.github/workflows/: build.yml  c-cpp.yml
src/: CardModel.h  Config.h  Flip3DAccessible.cpp  Flip3DAccessible.h  Flip3DComp.cpp  Flip3DComp.h  Flip3DComp_Accessible.cpp  Flip3DComp_Cards.cpp  Flip3DComp_Composition.cpp  Flip3DComp_Input.cpp  Flip3DComp_Rotation.cpp  Flip3DComp_ShellHook.cpp  Flip3DComp_Update.cpp  Flip3DComp_View.cpp  Flip3DComp_Window.cpp  FlipMath.h  MathTypes.h  Timeline.cpp  Timeline.h  main.cpp
